--- a/src/index.html
+++ b/src/index.html
@@ -76,8 +76,26 @@
       </div>
     </section>
 
-    <section id="gallery" class="gallery"></section>
-
+    <section id="gallery" class="gallery">
+      <div class="aboutUs">
+        <div class="aboutUs--text">
+          Café Lóra je moderní kavárna s rodinnou atmosférou. Můžete si u nás
+          posedět na pohodlných, vyměkčených křeslech a užít si tak nerušeně
+          šálek lahodné kávy. Lorem ipsum dolor sit amet, consectetuer
+          adipiscing elit. Et harum quidem rerum facilis est et expedita
+          distinctio. Quisque porta. In laoreet, magna id viverra tincidunt, sem
+          odio bibendum justo, vel imperdiet sapien wisi sed libero. In dapibus
+          augue non sapien. Duis risus. Fusce wisi. Suspendisse sagittis
+          ultrices augue. Duis risus. Quisque porta. Nullam faucibus mi quis
+          velit. Pellentesque habitant morbi tristique senectus et netus et
+          malesuada fames ac turpis egestas. Vivamus ac leo pretium faucibus.
+          Mauris tincidunt sem sed arcu. Curabitur bibendum justo non orci. Nam
+          quis nulla. Phasellus rhoncus. Etiam bibendum elit eget erat. Mauris
+          dolor felis, sagittis at, luctus sed, aliquam non, tellus. Aenean vel
+          massa quis mauris vehicula lacinia.
+        </div>
+      </div>
+    </section>
     <section>
       <div id="contact" class="container">
         <h2>Kde nás najdete</h2>
